# api/openapi.generated.yml
@@ -535,6 +535,48 @@ paths:
       summary: Form Get
       security:
       - ApiKeyAuth: []
+    put:
+      parameters:
+      - in: path
+        name: form_id
+        schema:
+          type: string
+        required: true
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/FormUpdateResponse'
+          description: Successful response
+        '422':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+          description: Validation error
+        '401':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+          description: Authentication error
+        '404':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+          description: Not found
+      tags:
+      - Form Alpha
+      summary: Form Update
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/FormUpdateRequest'
+      security:
+      - ApiKeyAuth: []
   /v1/users/{user_id}/applications:
     post:
       parameters:
@@ -3055,13 +3097,18 @@ components:
     FormInstruction:
       type: object
       properties:
+        form_instruction_id:
+          type: string
+          format: uuid
+          description: The UUID of the form instruction
+          example: 123e4567-e89b-12d3-a456-426614174000
         file_name:
           type: string
           description: The name of the form instruction file
           example: instructions.pdf
-        download_path:
+        file_location:
           type: string
-          description: The download URL for the form instruction file
+          description: The location of the form instruction file
         created_at:
           type: string
           format: date-time
@@ -3129,6 +3176,107 @@ components:
           - $ref: '#/components/schemas/FormInstruction'
           - type: 'null'
     FormResponseAlpha:
+      type: object
+      properties:
+        message:
+          type: string
+          description: The message to return
+          example: Success
+        data:
+          type:
+          - object
+          $ref: '#/components/schemas/FormAlpha'
+        status_code:
+          type: integer
+          description: The HTTP status code
+          example: 200
+        warnings:
+          type: array
+          description: A list of warnings - indicating something you may want to be
+            aware of, but did not prevent handling of the request
+          items:
+            type: &id007
+            - object
+            $ref: '#/components/schemas/ValidationIssue'
+    FormUpdateRequest:
+      type: object
+      properties:
+        form_name:
+          type: string
+          description: The name of the form
+          example: ABC Project Form
+        form_version:
+          type: string
+          description: The version of the form
+          example: '1.0'
+        agency_code:
+          type: string
+          description: The agency code for the form
+          example: SGG
+        omb_number:
+          type:
+          - string
+          - 'null'
+          description: The OMB number for the form
+          example: 4040-0001
+        form_json_schema:
+          type: object
+          description: The JSON Schema representation of the form
+          example:
+            type: object
+            title: Test form for testing
+            properties:
+              Title:
+                title: Title
+                type: string
+                minLength: 1
+                maxLength: 60
+              Description:
+                title: Description for application
+                type: string
+                minLength: 0
+                maxLength: 15
+              ApplicationNumber:
+                title: Application number
+                type: number
+                minLength: 1
+                maxLength: 120
+              Date:
+                title: 'Date of application '
+                type: string
+                format: date
+          additionalProperties: {}
+        form_ui_schema:
+          description: The UI Schema of the form for front-end rendering
+          example:
+          - type: field
+            definition: /properties/Title
+          - type: field
+            definition: /properties/Description
+          - type: field
+            definition: /properties/ApplicationNumber
+          - type: field
+            definition: /properties/Date
+        form_instruction_id:
+          type:
+          - string
+          - 'null'
+          format: uuid
+          description: The UUID of the form instruction
+          example: 123e4567-e89b-12d3-a456-426614174000
+        form_rule_schema:
+          type:
+          - object
+          - 'null'
+          description: The rule schema for the form
+          additionalProperties: {}
+      required:
+      - agency_code
+      - form_json_schema
+      - form_name
+      - form_ui_schema
+      - form_version
+    FormUpdateResponse:
       type: object
       properties:
         message:
@@ -3723,8 +3871,7 @@ components:
           description: A list of warnings - indicating something you may want to be
             aware of, but did not prevent handling of the request
           items:
-            type: &id007
-            - object
+            type: *id007
             $ref: '#/components/schemas/ValidationIssue'
         message:
           type: string
